# mall_backend

./: .env  .env.dev  Cargo.toml
migrations/: 20250418132134_create_test_table.sql  20250418212048_base_table.sql
src/: lib.rs  main.rs  routes.rs
src/application/: mod.rs
src/application/usecase/: item.rs  user_service.rs
src/config/: database.rs  di.rs  mod.rs
src/domain/model/: cart.rs  error.rs  item.rs  mod.rs  user.rs
src/domain/port/primary/: item_service_port.rs  mod.rs  user_service_port.rs
src/domain/port/secondary/: item_repository_port.rs  mod.rs  user_repository_port.rs
src/driven/: item_repository_impl.rs  mod.rs  user_repository_impl.rs
src/driving/rest_handler/: health_check_handler.rs  item_handler.rs  mod.rs  user_handler.rs
src/errors/: mod.rs
z_markdown/: builder_pattern.md  database_migration_guide.md  hexagonal_architecture_guide.md  rust_async_guide.md
