[package]
name = "mall"
version = "0.1.0"
edition = "2024"

[lib]
name="mall"
path = "src/lib.rs"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.10.2"
async-trait = "0.1.88"
chrono = {version="0.4.40", features = ["serde"]}
derive_builder = "0.20.2"
dotenv = "0.15.0"
env_logger = "0.11.8"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres"] }

tokio = "1.44.2"
uuid = {version="1.16.0", features = ["v4", "serde"]}
validator = "0.20.0"
